--- a/app_nomand/templates/email.html
+++ b/app_nomand/templates/email.html
@@ -1,9 +1,16 @@
 <html>
 <body>
-hello hotel,
-reservation details:
-guest name: {{ guest_name }}
-check in : {{ checkIn }}
-check out : {{ checkOut }}
+Hi,
+<br>
+Guest Name : {{ guest_name }} <br>
+TP : {{ guest_contact }} <br>
+Email : {{ guest_email }} <br>
+_______________________________<br>
+Hotel Name : {{ hotel_name }} <br>
+Reservation : {{ reservation_item }} <br>
+Location :  {{ location }} <br>
+Checking : {{ checkIn }} <br>
+Checkout : {{ checkOut }} <br>
+Experiences : {{ experiences }}  <br>
 {#<img src="mysite.com/logo.gif" />#}
 </body>
